[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseDialog.gd" type="Script" id=1]

[node name="PauseDialog" type="CenterContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -51.0
margin_right = 66.0
margin_bottom = 51.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 132.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 95.0

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 118.0
margin_bottom = 20.0
text = "Resume"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 118.0
margin_bottom = 44.0
text = "Exit Game"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 118.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 38.0
margin_bottom = 27.0
text = "Music"

[node name="MusicToggle" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 118.0
margin_bottom = 40.0
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/MusicToggle" to="." method="_on_MusicToggle_toggled"]
